--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@
 
 @import url(./blocks/logo/logo.css);
 @import url(./blocks/header/header.css);
+@import url(./blocks/header/__email/header__email.css);
+@import url(./blocks/header/__out/header__out.css);
 
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__button-edit-avatar/profile__button-edit-avatar.css);
