--- a/src/blocks/header/__email/header__email.css
+++ b/src/blocks/header/__email/header__email.css
@@ -1,4 +1,7 @@
 .header__email {
-    color: var(--white-color);
-    
+  color: var(--white-color);
+  font-family: "Inter";
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.22;
 }
