login and register styles css

--- a/src/variables/variables.css
+++ b/src/variables/variables.css
@@ -4,6 +4,7 @@
   --red-color: #FF0000;
   --grey-color: #545454;
   --light-grey-color: #A9A9A9;
+  --extralight-grey-color: #CCCCCC;
   --grey-opacity-07-color: rgba(84, 84, 84, 0.7);
   --black-opacity-00-color: rgb(0, 0, 0, 0.0);
   --black-opacity-02-color: rgba(0, 0, 0, 0.2);
