--- a/src/blocks/header/__button/header__button.css
+++ b/src/blocks/header/__button/header__button.css
@@ -1,6 +1,6 @@
-.header__out {
+.header__button {
   align-self: center;
-  color: var(--light-grey-color);
+  color: var(--white-color);
   background-color: var(--black-opacity-00-color);
   padding: 0;
   min-width: 53px;
@@ -11,4 +11,8 @@
   font-size: 18px;
   font-weight: 400;
   line-height: 1.22;
+}
+
+.header__button:hover {
+  opacity: 0.6;
 }
